<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/public_green"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/font_color"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <FrameLayout
        android:id="@+id/main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RadioGroup
        android:id="@+id/main_radoiGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_main_home"
            style="@style/main_RadioButton"
            android:checked="true"
            android:drawableTop="@drawable/icon_home_true"
            android:text="@string/main_home"/>
        <RadioButton
            android:id="@+id/rb_main_community"
            style="@style/main_RadioButton"
            android:checked="false"
            android:drawableTop="@drawable/icon_community_false"
            android:text="@string/main_community"
            android:textColor="@color/navigation_false"/>
        <RadioButton
            android:id="@+id/rb_main_order"
            style="@style/main_RadioButton"
            android:checked="false"
            android:drawableTop="@drawable/icon_order_false"
            android:text="@string/main_order"
            android:textColor="@color/navigation_false"/>
        <RadioButton
            android:id="@+id/rb_main_me"
            style="@style/main_RadioButton"
            android:checked="false"
            android:drawableTop="@drawable/icon_me_false"
            android:text="@string/main_me"
            android:textColor="@color/navigation_false"/>
    </RadioGroup>
</LinearLayout>