<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="30dp"
        android:text="@string/login_title"
        android:textColor="@color/font_color"
        android:textSize="@dimen/login_textsize"/>
    <EditText
        android:id="@+id/login_username"
        android:hint="@string/username"
        style="@style/login_et"
        android:drawableLeft="@drawable/user"
        android:inputType="textPersonName"/>//设置输入类型为“人名”
    <EditText
        android:id="@+id/login_password"
        android:hint="@string/password"
        style="@style/login_et"
        android:drawableLeft="@drawable/pass"
        android:inputType="textPassword"/>//设置输入类型为“密码”，内容可以是文本
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/login_forgettips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgettips"
            android:textColor="@color/font_color"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.316"
            />
        <ImageView
            android:id="@+id/login_forgetnav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:gravity="center_horizontal|bottom">
        <TextView
            android:id="@+id/login_nouser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nouser"
            android:textColor="#bbffffff"/>
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/font_color"/>
    </LinearLayout>

</LinearLayout>